src/assets/templates/adminlte/custom_styles.css
/* ... */
.ui-dialog .ui-dialog-title,
#dialogInvo.ui-dialog-content.ui-widget-content,
#dialogPaym.ui-dialog-content.ui-widget-content {
    background-color: white;
}

#dialogInvo.ui-dialog-content.ui-widget-content,
#dialogPaym.ui-dialog-content.ui-widget-content {
    min-height: 2.7rem !important;
    width: 93% !important;
}

#dialogInvo.ui-dialog-content.ui-widget-content p,
#dialogPaym.ui-dialog-content.ui-widget-content p {
    position: relative;
    top: 0.5rem;
    left: -0.3rem;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type='number'] {
    -moz-appearance: textfield;
}

.user-panel .image {
    padding-left: 0 !important;
}

.swal2-header {
    border: none;
}

.text-2lg {
    font-size: 1.5rem;
}

.tablesorter-jui .header,
.tablesorter-jui .tablesorter-header {
    padding: 0.2rem;
}

table.tablesorter {
    width: inherit;
    max-width: 95%;
    min-width: 50%;
    margin: 0.35rem 0 0.35rem;
}

table.tablesorter .header {
    color: #3d3d3d;
}

table.tablesorter tbody td {
    white-space: nowrap;
}

.form-gray {
    background-color: #f9fbfd;
}

.rounded-circle-home {
    width: 2.4rem !important;
    margin-right: 0.35rem;
}

.count-link {
    display: inline !important;
    margin-left: 0 !important;
    margin-top: -0.7rem !important;
}

.count-link a {
    font-size: 2.5rem;
    color: #f9fbfd !important;
}

#title_btns .btn-info {
    color: #343a40 !important;
    background-color: #fff !important;
    border-color: #343a40 !important;
    padding: 0.28rem 0.85rem !important;
    font-size: 1rem !important;
}

#title_btns .btn-info:nth-child(1) {
    border-radius: 0.35rem 0 0 0.35rem;
}

#title_btns .btn-info:nth-child(4) {
    border-radius: 0 0.35rem 0.35rem 0;
}

#title_btns .btn-info:hover {
    color: #fff !important;
    background-color: #343a40 !important;
    border-color: #343a40 !important;
    padding: 0.28rem 0.85rem !important;
    font-size: 1rem !important;
    transition-duration: 0.3s;
}

#crud-table .printer-hidden {
    color: #fff;
    background: #4f5962;
    border: 0.07rem solid #4f5962;
    padding: 0.2rem 0.4rem;
    font-size: 0.9rem;
    border-radius: 0.5rem;
}

#crud-table .printer-hidden:hover {
    background: #4f5962 !important;
    border: 0.07rem solid #4f5962 !important;
    transition-duration: 0.3s;
}

#title_btns .btn-info.active {
    color: #fff !important;
    background-color: #4f5962 !important;
    border-color: #4f5962 !important;
}

.service-heading {
    font-size: 2.07rem !important;
    margin-left: 0 !important;
    display: inline;
}

.social-image {
    width: 2.8rem !important;
}

a.blog-link:hover {
    color: #4f5962;
}

.info-box {
    box-shadow: none;
}

.info-box:hover,
.card:hover {
    box-shadow:
        0 0 0.07rem rgba(0, 0, 0, 0.125),
        0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
}

.info-box .info-box-icon {
    font-size: 3.875rem;
}

.row-flex {
    display: flex;
    flex-wrap: wrap;
}

.input-group-sm > .input-group-text {
    padding-bottom: 0.35rem;
}

#invoice_table_wrapper {
    width: 100%;
}

td.details-control {
    background: url('../../images/icons/details_open.png') no-repeat center center;
    cursor: pointer;
}

tr.shown td.details-control {
    background: url('../../images/icons/details_close.png') no-repeat center center;
}

#invoice_table td {
    vertical-align: middle;
}

.btn-app {
    background-color: #f8f9fa !important;
    transition-duration: 0.3s;
    color: #6c757d !important;
}

.btn-app:hover {
    background-color: #f8f9fa !important;
    border-color: #aaa !important;
    color: #444 !important;
}

.btn-app > .material-icons {
    display: block;
    font-size: 1.4rem;
    font-weight: 800;
    line-height: 1;
}

#info-progress-lg {
    height: 0.7rem !important;
    border-radius: 0.4rem;
}

.social {
    width: 1.78rem;
}

.list-group-item {
    padding: 0.8rem 2.3rem !important;
}

.home-card {
    padding: 0.8rem 2.5rem !important;
}

.callpin {
    border-left: 0.28rem solid #0af10a;
    position: relative;
    top: 1.4rem;
}

.home-cards {
    box-shadow:
        0 0 0.07rem rgba(0, 0, 0, 0.125),
        0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
    margin-bottom: 1.5rem !important;
    margin: 0.07rem;
    transition-duration: 0.4s;
    border-radius: 0.85rem;
}

.nameserver_heading:nth-child(1) .nameserver_label:after {
    visibility: visible;
    position: absolute;
    top: 0;
    left: 0;
    content: '1';
}

.nameserver_heading:nth-child(2) .nameserver_label:after {
    visibility: visible;
    position: absolute;
    top: 0;
    left: 0;
    content: '2';
}

.nameserver_heading:nth-child(3) .nameserver_label:after {
    visibility: visible;
    position: absolute;
    top: 0;
    left: 0;
    content: '3';
}
.nameserver_heading:nth-child(4) .nameserver_label:after {
    visibility: visible;
    position: absolute;
    top: 0;
    left: 0;
    content: '4';
}

.nameserver_label {
    visibility: hidden;
    position: relative;
}

.nameserver_heading {
    padding: 0.75rem;
    vertical-align: top;
    border: 0.07rem solid #dee2e6;
    font-size: 1rem;
    margin: 0 !important;
}

.nameserver_heading:nth-child(2),
.nameserver_heading:nth-child(4) {
    background-color: rgba(0, 0, 0, 0.05);
}

.box {
    margin: 1.4rem auto;
    border: 0.2rem solid #343a40;
    padding: 0.7rem !important;
    text-align: center;
    color: #343a40;
    position: relative;
    border-radius: 0.7rem;
    font-size: 1.14rem;
}

.comment:before {
    content: '';
    width: 0;
    height: 0;
    position: absolute;
    border-left: 0.7rem solid transparent;
    border-right: 0.7rem solid #343a40;
    border-top: 0.57rem solid #343a40;
    border-bottom: 0.7rem solid transparent;
    left: -1.5rem;
    top: 0.42rem;
}
/* ... */

